--- a/OpenGL_dev/OpenGL_dev.vcxproj
+++ b/OpenGL_dev/OpenGL_dev.vcxproj
@@ -146,11 +146,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
+    <ClCompile Include="src\IndexBuffer.cpp" />
     <ClCompile Include="src\Shader.cpp" />
+    <ClCompile Include="src\VertexArray.cpp" />
     <ClCompile Include="src\VertexAttribute.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Readme.md" />
+    <None Include="resources\shaders\basic.shader" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
