--- a/OpenGL_dev/OpenGL_dev.vcxproj.filters
+++ b/OpenGL_dev/OpenGL_dev.vcxproj.filters
@@ -24,8 +24,15 @@
     <ClCompile Include="src\Shader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\IndexBuffer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\VertexArray.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Readme.md" />
+    <None Include="resources\shaders\basic.shader" />
   </ItemGroup>
 </Project>
