--- a/OpenGL_dev/OpenGL_dev.vcxproj
+++ b/OpenGL_dev/OpenGL_dev.vcxproj
@@ -170,6 +170,10 @@
     <ClInclude Include="src\VertexBuffer.h" />
     <ClInclude Include="src\VertexBufferLayout.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="resources\textures\github.png" />
+    <Image Include="resources\textures\youtube.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
